# projectm

./: .gitignore  ANDROID_TV_OPTIMIZATIONS_IMPLEMENTED.md  README.md  RELEASE_NOTES.md  build-all-abis.sh  build.gradle  build.sh  debug.sh  gradle.properties  install.sh  local.properties  scp-simple.sh  settings.gradle  sync-native-libs.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/presets/: presets.zip.sha256
app/src/main/cpp/: CMakeLists.txt  CMakeLists_simple.txt  jni_simple.cpp  native-lib.cpp
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  loading_screen.xml
app/src/main/res/values-v31/: themes.xml
src/libprojectM/: CMakeLists.txt  ExternalFramebufferAPI.cpp  PresetFactoryManager.cpp  PresetFactoryManager.hpp  PresetFileParser.cpp  PresetFileParser.hpp  ProjectM.cpp  ProjectM.hpp  ProjectMCWrapper.cpp  TimeKeeper.cpp
src/libprojectM/Audio/: Loudness.cpp  PCM.cpp
src/libprojectM/MilkdropPreset/: BlurTexture.cpp  CustomShape.cpp
src/libprojectM/MilkdropPreset/Waveforms/: CenteredSpiro.cpp  Circle.cpp  DerivativeLine.cpp  Milkdrop2077Wave11.cpp  Milkdrop2077Wave9.cpp  Milkdrop2077WaveFlower.cpp  Milkdrop2077WaveLasso.cpp  Milkdrop2077WaveSkewed.cpp  Milkdrop2077WaveStar.cpp  Milkdrop2077WaveX.cpp
src/libprojectM/Renderer/: Framebuffer.cpp  Framebuffer.hpp  PresetTransition.cpp  TextureAttachment.cpp
src/libprojectM/UserSprites/: Factory.cpp  MilkdropSprite.cpp  SpriteManager.cpp
src/playlist/: Filter.cpp
src/sdl-test-ui/: pmSDL.cpp  setup.cpp
(+30 files in other folders)
